# vibe-dj

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DOCKER.md  Dockerfile  Dockerfile-API  Dockerfile-Server  LICENSE  Makefile  README.md  REFACTORING_SUMMARY.md  THREADING_FIX.md  agents.md  build-docker.sh  config.example.json  config.json  docker-compose.yml  interesting_queries.md  pyproject.toml  seeds.example.json  seeds.json
.beads/: issues.jsonl  metadata.json
.github/workflows/: build-release.yml  ci.yml  docker.yml  release.yml
.windsurf/: napkin.md
.windsurf/skills/: lucastamoios-openspec-to-beads
.windsurf/skills/napkin/: SKILL.md
docs/: API_README.md  CONCURRENCY_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  NAVIDROME_INTEGRATION.md  RESUMABLE_INDEXING.md  TIMEOUT_FIX.md  enhanced-audio-features.md  interesting_queries_feasibility.md
docs/UI/: README.md  button-variants.md  design-tokens.md  technical-spec.md  ui-mockups.md
docs/development/: contributing.md
feature_docs/: config-persistence.md  config_feature.md  config_screen_redesign.md  remove_env_vars_feature.md
openspec/changes/ui-theme-baseline/: specs.md  tasks.md
openspec/changes/ui-theme-v1-1-semantic-consistency/: STYLE_GUIDE.md  accessibility-validation.md  design.md  proposal.md  specs.md  tasks.md  test-validation.md
openspec/specs/ui/: theme.spec.md
scripts/: migrate_add_album.py
src/vibe_dj/: Saving_Configs.md  __init__.py  analyzer.py  app.py  config.py  db.py  indexer.py  logging_config.py  main.py  playlist_gen.py  utils.py
src/vibe_dj/api/: __init__.py  background.py  dependencies.py  models.py
src/vibe_dj/core/: __init__.py  analyzer.py  (+4 more)
tests/: test_api.py
tests/integration/: test_profile_migration.py  test_resumable_indexing.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
(+87 files in other folders)
