[project]
name = "vibe-dj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Seward", email = "nick@homeslice.ca" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
vibe-dj = "vibe_dj:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
