[project]
name = "vibe-dj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Seward", email = "nick@homeslice.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "faiss-cpu>=1.13.2",
    "librosa>=0.11.0",
    "loguru>=0.7.0",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "numpy>=2.3.5",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]

[project.scripts]
vibe-dj = "vibe_dj:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
