[project]
name = "vibe-dj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Seward", email = "nick@homeslice.ca" }
]
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.115.0",
    "librosa>=0.11.0",
    "loguru>=0.7.0",
    "mutagen>=1.47.0",
    "numpy>=2.3.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff==0.12.8",
]
test = [
    "httpx>=0.28.0",
    "pytest==9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov==7.0.0",
]


[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
